<resources>
    <string name="app_name">LostandFoundApp</string>
    <string name="create_a_new_advert">Create A New Advert</string>
    <string name="show_all_lost_amp_found_items"><![CDATA[Show All Lost & Found Items]]></string>
    <string name="lost_amp_found_items"><![CDATA[Lost & Found Items]]></string>
    <string name="remove4">Remove</string>
    <string name="post_type">Post type:</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="phone">Phone:</string>
    <string name="description">Description:</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="save">Save</string>
    <string name="title_activity_map">MapActivity</string>
</resources>